--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -13,7 +13,7 @@
             }
         </style>
         <!-- This has to be relative to where this document is being called from -->
-        <script src="../frontend/auth.js"></script>
+        <script src="../frontend/signin.js"></script>
     </head>
     <body>
         <table border="0" cellpadding="2" cellspacing="5" bgcolor="#EEEEEE" class="signup">
