--- a/frontend/user.html
+++ b/frontend/user.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Assignment 2 Main Page</title>
+        <title>Assignment 2 User Page</title>
         <link rel="stylesheet" href="../frontend/nav.css">
         <style>
             img {
@@ -12,12 +12,6 @@
             }
             h2 {
                 text-align: center;
-            }
-            h4 {
-                color:red;
-                text-align: center;
-                margin-left: auto;
-                margin-right: auto;
             }
         </style>
         <script src="../frontend/nav.js"></script>
@@ -42,21 +36,13 @@
             </script>          
         </nav>
         
-        <h4 id="error" style="visibility:hidden;"></h4>
         <h2 id="banner"></h2>
         <img id="welcome-woof">
         <script>
             var username = "<?php echo $_SESSION['username']; ?>"
-
-            if (status == '0') {
-                document.getElementById("banner").innerHTML = "Welcome visitor!"
-                document.getElementById("welcome-woof").src = "https://images.pexels.com/photos/3357026/pexels-photo-3357026.jpeg?cs=srgb&dl=pexels-andreas-schmolmueller-3357026.jpg&fm=jpg"
-                document.getElementById("welcome-woof").alt = "Brown dog on a beach"
-            } else {
-                document.getElementById("banner").innerHTML = "Hello ".concat(username).concat("!")
-                document.getElementById("welcome-woof").src = "https://images.pexels.com/photos/666870/pexels-photo-666870.jpeg?cs=srgb&dl=pexels-tuan-nguyen-666870.jpg&fm=jpg"
-                document.getElementById("welcome-woof").alt = "White dog smiling"
-            }
+            document.getElementById("banner").innerHTML = "You are in the user's page, ".concat(username).concat(". Make yourself at home!")
+            document.getElementById("welcome-woof").src = "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-shiba-inu-dog-with-laptop-in-room-royalty-free-image-882303800-1551122520.jpg"
+            document.getElementById("welcome-woof").alt = "black and white dog on laptop"
         </script>
     </body>
 </html>
