Changed table title in user's page.

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -67,7 +67,7 @@
                 }
             }            
 
-            document.getElementById("banner").innerHTML = "You are in the user's page, make yourself at home!<br><br>"
+            document.getElementById("banner").innerHTML = "<h2>You are in the user's page, make yourself at home!</h2>"
             document.getElementById("welcome-woof").src = "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-shiba-inu-dog-with-laptop-in-room-royalty-free-image-882303800-1551122520.jpg"
             document.getElementById("welcome-woof").alt = "black and white dog on laptop"
         </script>
