Added texture to information table in user page

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -17,6 +17,9 @@
                 text-align: center;
                 margin-left: auto;
                 margin-right: auto;
+                margin-top: auto;
+                margin-left: auto;
+                border: 1px solid #999999;
             }
         </style>
         <script src="../frontend/nav.js"></script>
@@ -44,7 +47,7 @@
             </script>          
         </nav>
         <h2 id="banner" colspan="2"></h2>
-        <table id='user-table' class='table' cellpadding='2' cellspacing='5'></table>
+        <table border='0' bgcolor='#EEEEEE' class='table' cellpadding='2' cellspacing='5' id='user-table'></table>
         <br>
         <img id="welcome-woof">
 
