--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -10,21 +10,15 @@
                 margin-right: auto;
                 width: 50%;
             }
-            .signup {
-                border: 1px solid #999999;
-            }
-
-            .main-table {
-                margin-left:auto;
-                margin-right:auto;
-                margin-top:auto;
-                margin-bottom:auto;
-                padding-top:100;
-            }
             table {
                 text-align: center;
+            }
+            .signup {
+                border: 1px solid #999999;
                 margin-left: auto;
                 margin-right: auto;
+                margin-top: auto;
+                margin-bottom: auto;
             }
         </style>
         <script src="../frontend/signin.js"></script>
@@ -50,46 +44,42 @@
             </script>          
         </nav>
         <br>
-        <table class='main-table' cellpadding="2" cellspacing="5">
-            <tr>
-                <td>
-                    <img id="welcome-woof" src="https://cdn.pixabay.com/photo/2019/12/23/11/29/dog-4714363_960_720.jpg"> 
-                </td>
-                <td>
-                    <table border="0" cellpadding="2" cellspacing="5" bgcolor="#EEEEEE" class="signup">
-                        <th colspan="2">Sign in</th>
-                        <tr>
-                            <td colspan="2">
-                                <font color=red size=2 id='error'>
-                                    <script>
-                                        var result = "<?php echo $result; ?>"
-                                        if (result != '') {
-                                            document.getElementById("error").innerHTML = result
-                                        }
-                                    </script>
-                                </font>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="1">
-                                <form method="post" action="../backend/signin.php" onsubmit="return validate(this)">
-                                    <tr>
-                                        <td>Username:</td>
-                                        <td><input type="text" maxlength="50" name="username"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Password:</td>
-                                        <td><input type="password" maxlength="255" name="password"></td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="2"><input type="submit" value="Sign In"></td>
-                                    </tr>
-                                </form>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
+        <table cellpadding="2" cellspacing="5">
+            <td><img id="welcome-woof"></td>
+            <td>
+                <table border="0" cellpadding="2" cellspacing="5" bgcolor="#EEEEEE" class="signup">
+                    <th colspan="2">Sign in</th>
+                    <tr>
+                        <td colspan="2"><font color=red size=2 id='error'></font></td>
+                    </tr>
+                    <tr>
+                        <td colspan="1">
+                            <form method="post" action="../backend/signin.php" onsubmit="return validate(this)">
+                                <tr>
+                                    <td>Username:</td>
+                                    <td><input type="text" maxlength="50" name="username"></td>
+                                </tr>
+                                <tr>
+                                    <td>Password:</td>
+                                    <td><input type="password" maxlength="255" name="password"></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"><input type="submit" value="Sign In"></td>
+                                </tr>
+                            </form>
+                        </td>
+                    </tr>
+                </table>
+            </td>
         </table>
+        <script>
+            var result = "<?php echo $result; ?>"
+            if (result != '') {
+                document.getElementById("error").innerHTML = result
+            }
+
+            document.getElementById("welcome-woof").src = "https://cdn.pixabay.com/photo/2019/12/23/11/29/dog-4714363_960_720.jpg"
+            document.getElementById("welcome-woof").alt = "Dog hands paw to human"
+        </script>
     </body>
 </html>
