--- a/frontend/user.html
+++ b/frontend/user.html
@@ -5,27 +5,26 @@
         <link rel="stylesheet" href="../frontend/nav.css">
         <style>
             img {
-                display: block;
-                margin-left: auto;
+                width: 70%;
+                display:inline-block;
+                margin-left:auto;
                 margin-right: auto;
-                width: 40%;
             }
             h2 {
                 text-align: center;
             }
             table {
-                text-align: center;
-                margin-left: auto;
+                text-align:center;
+                margin-left:auto;
                 margin-right: auto;
                 margin-top: auto;
-                margin-left: auto;
+                margin-bottom: auto;
+            }
+            .user-table {
                 border: 1px solid #999999;
             }
         </style>
         <script src="../frontend/nav.js"></script>
-        <script>
-            var status = "<?php echo $status; ?>";
-        </script>
     </head>
     <body>
         <nav class="nav">
@@ -46,10 +45,13 @@
                 admin_button(document.getElementById("admin-button"))
             </script>          
         </nav>
-        <h2 id="banner" colspan="2"></h2>
-        <table border='0' bgcolor='#EEEEEE' class='table' cellpadding='2' cellspacing='5' id='user-table'></table>
-        <br>
-        <img id="welcome-woof">
+        <h2 id="banner"></h2>
+        <table>
+            <tr>
+                <td style="width: 50%;"><img id="welcome-woof"></td>
+                <td style="width: 50%;"><table border='0' bgcolor='#EEEEEE' cellpadding="2" cellspacing="5" class='user-table' id='userdatatable'></table></td>
+            </tr>
+        </table>
 
         <script>
             var user_data = JSON.parse('<?php echo json_encode($_SESSION); ?>')
@@ -62,14 +64,14 @@
                         case "check":
                             continue
                         default:
-                            document.getElementById("user-table").innerHTML += 
-                                "<tr><td style='text-align: left;''>" + key + ": </td><td style='text-align: left;'>" + user_data[key] + "</td></tr>"
+                            document.getElementById("userdatatable").innerHTML += 
+                                "<tr><td style='text-align: left;'>" + key + ": </td><td style='text-align: left;'>" + user_data[key] + "</td></tr>"
                     }
                 }
             }            
 
             document.getElementById("banner").innerHTML = "You are in the user's page, make yourself at home!<br>"
-            document.getElementById("welcome-woof").src = "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-shiba-inu-dog-with-laptop-in-room-royalty-free-image-882303800-1551122520.jpg"
+            document.getElementById("welcome-woof").src = "https://d339b5nop2tkmp.cloudfront.net/uploads/pictures/2144/content_BARRC__1_.jpg"
             document.getElementById("welcome-woof").alt = "black and white dog on laptop"
         </script>
     </body>
