--- a/frontend/user.html
+++ b/frontend/user.html
@@ -6,7 +6,7 @@
         <style>
             img {
                 width: 70%;
-                display:inline-block;
+                display:block;
                 margin-left:auto;
                 margin-right: auto;
             }
