--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -21,7 +21,7 @@
                 margin-bottom: auto;
             }
         </style>
-        <script src="../frontend/signin.js"></script>
+        <script src="../frontend/authentication.js"></script>
         <script src="../frontend/nav.js"></script>
     </head>
     <body>
