FIxed bugs of refactoring, tested inserting users via admin.php to be working. Tested regular user vs admin user privileges to be working.

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -55,8 +55,8 @@
                                     <tr>
                                         <td>User type:</td>
                                         <td><select name="type" id="user_type">
-                                            <option value="Regular">Regular</option>
-                                            <option value="Admin">Admin</option>
+                                            <option value="1" selected="selected">Regular</option>
+                                            <option value="2">Admin</option>
                                         </select></td>
                                     </tr>
                                     <tr>
@@ -80,7 +80,7 @@
                                         <td><input type="password" maxlength="255" name="confirm_password"></td>
                                     </tr>
                                     <tr>
-                                        <td colspan="2"><input type="submit" value="add"></td>
+                                        <td colspan="2"><input type="submit" value="add user"></td>
                                     </tr>
                                 </form>
                             </td>
