Small changes to admin.html

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -126,7 +126,7 @@
             }
 
             var username = "<?php echo $_SESSION['username']; ?>"
-            document.getElementById("banner").innerHTML = "Be careful around here ".concat(username).concat(", we're in the admin page!")
+            document.getElementById("banner").innerHTML = "Be careful around here ".concat(username).concat(", you're in the admin page!")
             document.getElementById("welcome-woof").src = "https://www.publicdomainpictures.net/pictures/270000/velka/dog-and-computer-screen.jpg"
             document.getElementById("welcome-woof").alt = "Dog sits on the lap as the person attempts to post online"
         </script>
